--- a/classB/classB.html
+++ b/classB/classB.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="classB.css">
 </head>
 <body>
-    <h1 class = "title"> Subnetting Class B IP address.</h1>
-    <p class = "learn"> Learn more about the IP-classes
+    <h1 class = "title"> Subnetting Class B IP addresses</h1>
+    <p class = "learn"> To learn more about the IP-classes
         <a href = "https://www.meridianoutpost.com/resources/articles/IP-classes.php" target = "_blank" style = "font-size: 20px;"> Click here!</a>
     </p>
     <img src = "../class.png" alt = "classes"/>
 
     <div>
-    <button onclick="showIP()"> Generate network ID</button>
+    <button onclick="showIP()" class = "Generate_IP">  Generate IP address that would be assigned to a host device</button>
     <p id = "generateIP"></p>
     </div>
 
     <form id = "form-1">
 
         <div id = "id_0">
-            <label for = "subnet_mask"> What will be the classfull subnet mask for the class B network ?</label>
+            <label for = "subnet_mask">What is the default subnet mask IP address for the class B IP addresses ?</label>
             <select name="subnet_mask" id="subnet_mask" onchange="next0()">
                 <option value = "A"> 255.0.0.0</option>
                 <option value = "B"> 255.255.0.0</option>
@@ -30,13 +30,12 @@
             <div id = "feedback_mssg0"></div>
             <div class = "answer-button" id = "answer-button-1"> How to do ??  </div>
             <div id = "answer-1">
-                Since it is a class B network, default subnet mask will be 255.255.0.0.<br>
-                In binary, it will be 11111111.11111111.00000000.00000000.
+                The default subnet mask IP address for the class B IP addresses is 255.255.0.0.
             </div>
         </div>
 
         <div id = "id_1">
-            <label for = "sub_id"> What will be the subnet mask(in decimal) for the given IP address? </label>
+            <label for = "sub_id">What is the subnet mask IP address associated with the CIDR value for the IP address assigned to the host device ?</label>
             <input type="text" id = "sub_id" name = "sub_id" onchange="next1()"/>
 
             <div id = "feedback_mssg1"></div>
@@ -53,14 +52,14 @@
         </div>
 
         <div id = "id_1_b">
-            <label for = "binary_id"> Convert the given IP address into binary form ?</label>
+            <label for = "binary_id">  What is the binary form of IP address assigned to the host device ?</label>
             <input type="text" id = "binary_id" name = "binary_id" onchange="next1_b()"/><br>
             <div id = "feedback_mssg1_b"></div><br><br>
             <a class = "answer-button" href = "https://whatismyipaddress.com/ip-address-to-binary" target = "_blank" id = "convert-button"> How to Convert ?</a>
         </div>        
 
         <div id = "id_2">
-            <label for = "net_id"> What will be the network ID or the first IP in each network? </label>
+            <label for = "net_id">What is the network IP address associated with the host device? </label>
             <input type="text" id = "net_id" name = "net_id" onchange="next2()"/>
 
             <div id = "feedback_mssg2"></div>
@@ -80,7 +79,7 @@
         </div>
 
         <div id = "id_3" >
-            <label for = "broad_id"> What will be the broadcast ID or the last IP in each network? </label>
+            <label for = "broad_id"> What broadcast IP address will the host device use to broadcast IP packets to all other computers that reside in our broadcast domain (i.e. subnet) ?</label>
             <input type="text" id = "broad_id" name = "broad_id" onchange="next3()"/>
             <div id = "feedback_mssg3"></div>
             <div class = "answer-button" id = "answer-button-4"> How to do ??  </div>
@@ -101,7 +100,7 @@
         </div>
 
         <div id = "id_4">
-            <label for = "first_id"> What will be the first usable host IP? </label>
+            <label for = "first_id">What is the first assignable IP address for the broadcast domain in which the host device(computer) resides ?</label>
             <input type="text" id = "first_id" name = "first_id" onchange="next4()"/>
             <div id = "feedback_mssg4"></div>
             <div class = "answer-button" id = "answer-button-5"> How to do ??  </div>
@@ -114,7 +113,7 @@
         </div>
 
         <div id = "id_5">
-            <label for = "last_id"> What will be the last usable host IP? </label>
+            <label for = "last_id">  What is the last assignable IP address for the broadcast domain in which our computer resides ?</label>
             <input type="text" id = "last_id" name = "last_id" onchange="next5()"/>
             <div id = "feedback_mssg5"></div>
             <div class = "answer-button" id = "answer-button-6"> How to do ??  </div>
@@ -126,7 +125,7 @@
         </div>
 
         <div id = "id_6">
-            <label for = "usable_host"> What will be the total number of usable host IP? </label>
+            <label for = "usable_host"> How many total assignable IP address exist for the broadcast domain in which the host device (computer) resides ?</label>
             <input type="text" id = "usable_host" name = "usable_host" onchange="next6()"/>
             <div id = "feedback_mssg6"></div>
             <div class = "answer-button" id = "answer-button-7"> How to do ??  </div>
