Made some instructions changes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <p class = "welcome">Welcome to the World of IP Address Subnetting </p>
-    <p style="margin: 20px;"> IP Address Subnetting is a computer networking method that involves dividing large block of contiguous IP addresses into smaller blocks of contiguous IP addresses that can be assigned to one or more broadcast domains(i.e, subnets)<br><br> 
-        Want to learn more about subnetting ?
+    <p style="margin: 20px;"> IP Address Subnetting is a computer networking method that involves dividing large blocks of contiguous IP addresses into smaller blocks of contiguous IP addresses that can be assigned to one or more broadcast domains (i.e, subnets)<br><br> 
+        Want to learn more about subnetting?
     <a href = " https://www.solarwinds.com/resources/it-glossary/subnetting" target="_blank">CLICK HERE !</a>
     </p>
-    <h1 class = "class"> What class of IP addresses you are interested in subnetting ?</h1>
+    <h1 class = "class"> What IP address class are you interested in subnetting ?</h1>
     <div class = "buttons">
     <button>
         <a href = "classA/classA.html" target = "_blank"> CLASS A</a>
