Changed the default subnet mask

--- a/classB/classB.html
+++ b/classB/classB.html
@@ -23,6 +23,7 @@
         <div id = "id_0">
             <label for = "subnet_mask">What is the default subnet mask IP address for the class B IP addresses ?</label>
             <select name="subnet_mask" id="subnet_mask" onchange="next0()">
+                <option value = "N"> 0.0.0.0</option>
                 <option value = "A"> 255.0.0.0</option>
                 <option value = "B"> 255.255.0.0</option>
                 <option value="C">255.255.255.0</option>
